--- a/index.qmd
+++ b/index.qmd
@@ -1,25 +1,16 @@
 ---
 title: "Hello, Penguins!"
-author: "Mine Çetinkaya-Rundel"
-format: 
-  html: default
-  pdf: default
+format: html
 editor: visual
-execute: 
-  echo: true
-bibliography: references.bib
 ---
-
-# Introduction
 
 ## Data
 
-For this analysis we'll use the `penguins` dataset from the [**palmerpenguins**](https://allisonhorst.github.io/palmerpenguins/ "Link to palmerpenguins documentation") package.[@gorman2014]
+For this analysis we'll use the penguins dataset from the palmerpenguins package.
 
 ```{r}
 #| label: load-packages
 #| message: false
-
 library(tidyverse)
 library(ggthemes)
 library(palmerpenguins)
@@ -28,22 +19,12 @@ library(gt)
 
 ## Species
 
-@fig-bill-dims-species is a bar plot of species of penguins.
+The figure below is a bar plot of species of penguins.
 
 ```{r}
-#| label: fig-bill-dims-species
-#| fig-cap: |
-#|   A scatterplot of three species of penguins showing the relationship between 
-#|   bill depth and bill length.
+#| label: bill-dims-species
 #| fig-width: 5
 #| fig-asp: 0.618
-#| fig-alt: |
-#|   A scatterplot of three species of penguins showing the relationship between 
-#|   bill depth and bill length.
-#| warning: false
-#| output-location: column-fragment
-#| code-line-numbers: "|2|3-6|10"
-
 ggplot(
   penguins,
   aes(
@@ -59,32 +40,12 @@ ggplot(
 
 ## Penguins
 
-@tbl-penguins-top10 shows the first 10 penguins from the dataset.
+The table below shows the first 10 penguins from the dataset.
 
 ```{r}
-#| label: tbl-penguins-top10
-#| tbl-cap: Top 10 rows of the penguins dataset.
-
+#| label: penguins-top10
 penguins |>
   slice_head(n = 10) |>
   select(species, island, bill_length_mm, bill_depth_mm) |>
   gt()
 ```
-
-# Analysis
-
-## Model 1 results
-
-::: incremental
--   Some information about the model
-
--   Some text about results
-
--   Some comments about shortcomings
-:::
-
-## Model 2 results
-
-blah blah blah
-
-## References
