--- a/talk.qmd
+++ b/talk.qmd
@@ -14,6 +14,30 @@ format:
 editor: visual
 ---
 
+# Reproducible data analysis
+
+## Reproducibility checklist {.smaller}
+
+::: {.callout-note appearance="minimal" icon="false"}
+What does it mean for a data analysis to be “reproducible”?
+:::
+
+. . .
+
+**Bare minimum:**
+
+-   Are the tables and figures reproducible from the code and data?
+
+-   Does the code actually do what you think it does?
+
+-   In addition to what was done, is it clear *why* it was done?
+
+**A bit more ambitious:**
+
+-   Can the code be used for other data?
+
+-   Can you extend the code to do other things?
+
 # What is Quarto?
 
 ## Quarto ...
